# McRConnect

./: .gitignore  docker-compose.yml  pyproject.toml  scanner.py
client/: Dockerfile  client.py
server/: Dockerfile  server.py
web/: index.html  package-lock.json  package.json
web/src/: App.vue  main.js
