[tool.poetry]
name = "mcrconnect"
version = "0.1.0"
description = ""
authors = ["msterhuj <gabin.lanore@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mcstatus = "^10.0.3"
pymongo = "^4.4.0"
pycraft = "^1503040"
cryptography = "^41.0.1"
quarry = "^1.9.4"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

